# fdxx

./: .gitignore  README.md
src/: .clang-format  .clang-tidy  CMakeLists.txt
src/example/: CMakeLists.txt  example.cpp
src/include/fdxx/: BitMask.hpp  Bitmask.hpp  DefaultLogger.hpp  Event.hpp  Fdxx.hpp  Handler.hpp  Logger.hpp  Runloop.hpp  RunloopFactory.hpp  Timer.hpp  TimerFactory.hpp
src/include/fdxx/detail/: Bitmask.hpp  DefaultLogger.hpp  Logger.hpp
src/src/: DefaultLogger.cpp  DefaultRunloop.cpp  DefaultRunloop.hpp  DefaultTimer.cpp  DefaultTimer.hpp  Epoll.hpp  Event.cpp  LinuxEpoll.cpp  LinuxEpoll.hpp  Poll.hpp  RunloopFactory.cpp  TimerFactory.cpp
